# moment1D

./: .gitignore  CMakeLists.txt  README.md  convert_CMakeLists.py
scripts/: em_wave.py  plasma_oscillation.py  plasma_wave_beach.py  reader.py  shock_tube.py
src/: core.hpp  diag.cpp  diag.hpp  field_flux_solver.hpp  moment_flux_solver.hpp  push_hyperbolic.cpp  push_hyperbolic.hpp  push_source.hpp
src/apps/: em_wave.cpp  plasma_oscillation.cpp  plasma_wave_beach.cpp  shock_tube.cpp
tests/: test_Vector3D.cpp  test_moment_flux_solver.cpp  test_push_source.cpp
